@@ -12,14 +12,7 @@ public enum SWEKOperand {
 
     SWEKOperand(String _representation) {
         representation = _representation;
-
-        String encode;
-        try {
-            encode = URLEncoder.encode(representation, StandardCharsets.UTF_8.name());
-        } catch (Exception e) {
-            encode = representation;
-        }
-        encodedRepresentation = encode;
+        encodedRepresentation = URLEncoder.encode(representation, StandardCharsets.UTF_8);
     }
 
 }
